--- a/src/css/desktop.styles.css
+++ b/src/css/desktop.styles.css
@@ -28,7 +28,7 @@
 
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Nesans Semi', sans-serif;
 }
 
 nav {
@@ -129,4 +129,138 @@ footer {
 
 .social-links a:hover {
   text-decoration: underline;
+}
+
+.carousel {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  margin: 2rem 0;
+}
+
+.carousel-container {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: max-content;
+}
+
+.carousel-item {
+  flex: 0 0 auto;
+  width: 15rem;
+  height: 30rem;
+  margin: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 80%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+}
+
+.carousel-img:hover {
+  transform: scale(1.1);
+}
+
+.ver-overlay {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  text-align: center;
+  padding: 0.5rem;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.carousel-image:hover .ver-overlay {
+  opacity: 1;
+}
+
+.carousel-name,
+.carousel-price {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.carousel-name {
+  color: #333;
+  background: #f8f8f8;
+  border-top: 1px solid #ddd;
+}
+
+.carousel-price {
+  color: #fff;
+  background: #000;
+}
+
+
+.carousel-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.carousel-btn.left {
+  left: 0;
+}
+
+.carousel-btn.right {
+  right: 0;
+}
+
+
+.product-details {
+  display: flex;
+  gap: 2rem;
+}
+
+.images-section {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#big-image {
+  width: 100%;
+  height: auto;
+}
+
+.small-images img {
+  width: 3rem;
+  height: auto;
+  cursor: pointer;
+}
+
+.small-images img:hover {
+  opacity: 0.7;
 }
