--- a/css/desktop.styles.css
+++ b/css/desktop.styles.css
@@ -152,7 +152,7 @@ footer {
   flex: 0 0 auto;
   width: 15rem;
   height: 30rem;
-  margin: 0 0 0 1rem;
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
