--- a/css/desktop.styles.css
+++ b/css/desktop.styles.css
@@ -144,6 +144,9 @@ footer {
 
 .carousel-container {
   display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin: 0 1rem;
   transition: transform 0.5s ease-in-out;
   width: max-content;
 }
@@ -187,7 +190,7 @@ footer {
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
   text-align: center;
-  padding: 0.5rem;
+  padding: 0.5rem 0;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
@@ -590,3 +593,5 @@ select {
 .mobile-product-carousel {
   display: none;
 }
+
+
